      in the DDL. Previously no specification was emitted and the
      database default would take effect (usually NULL, but not
      always).  To explicitly request the database default,
      configure columns with nullable=None and no specification
      will be emitted in DDL. This is backwards incompatible
      behavior. [ticket:1243]

- postgres
    - Calling alias.execute() in conjunction with
      server_side_cursors won't raise AttributeError.

    - Added Index reflection support to Postgres, using a
      great patch we long neglected, submitted by 
      Ken Kuhlman. [ticket:714]

- oracle
    - Adjusted the format of create_xid() to repair
      two-phase commit.   We now have field reports
      of Oracle two-phase commit working properly
      with this change.

    - Added OracleNVarchar type, produces NVARCHAR2, and also
      subclasses Unicode so that convert_unicode=True by default.
      NVARCHAR2 reflects into this type automatically so 
      these columns pass unicode on a reflected table with no explicit
      convert_unicode=True flags.  [ticket:1233]
      
- mysql
    - Fixed bug in exception raise when FK columns not present
      during reflection. [ticket:1241]
      
- associationproxy
    - The association proxy properties are make themselves available
      at the class level, e.g. MyClass.aproxy.  Previously this
      evaluated to None.

- declarative
    - The full list of arguments accepted as string by backref() 
      includes 'primaryjoin', 'secondaryjoin', 'secondary', 
      'foreign_keys', 'remote_side', 'order_by'.
      
0.5.0rc4
========
- features
- orm
    - Query.count() has been enhanced to do the "right
      thing" in a wider variety of cases. It can now
      count multiple-entity queries, as well as
      column-based queries. Note that this means if you
      say query(A, B).count() without any joining
      criterion, it's going to count the cartesian
      product of A*B. Any query which is against